--- a/index.html
+++ b/index.html
@@ -134,15 +134,11 @@
                 {/* Hero Section */}
                 <header className="pt-32 pb-20 md:pt-48 md:pb-32 px-6 bg-white">
                     <div className="max-w-4xl mx-auto">
-                    <div className="inline-flex items-center px-3 py-1 rounded-full bg-indigo-50 text-indigo-700 text-xs font-bold uppercase tracking-wider mb-6">
-                        Quantitative Trader & Researcher
-                    </div>
                     <h1 className="font-serif text-5xl md:text-7xl font-bold text-slate-900 mb-8 leading-tight">
                         Steve Hong
                     </h1>
                     <p className="text-xl md:text-2xl text-slate-600 leading-relaxed max-w-2xl mb-10">
-                        Specializing in Machine Learning, Time Series Analysis, and Quantitative Strategies. 
-                        Currently building trading strategies at <span className="font-medium text-slate-900">DV Trading LLC</span>.
+                        I have been working on AI research, and currently work as a Quantitative Trader/Researcher at <span className="font-medium text-slate-900">DV Trading LLC</span>.
                     </p>
                     
                     <div className="flex flex-wrap gap-4">
@@ -358,7 +354,7 @@
                             </div>
                         </div>
                         <p className="text-slate-600 mb-3">
-                            Sped up investment content analyses by 10% using LLMs. Fine-tuned FinBERT for financial NER achieving 20% better F1 scores.
+                            Sped up investment content analyses by 10% using LLMs. Fine-tuned FinBERT with LoRA for financial NER achieving 20% better F1 scores.
                         </p>
                         </div>
 
@@ -388,7 +384,7 @@
                         <p className="font-medium text-lg text-slate-800 mb-2">MPhil Machine Learning & Machine Intelligence</p>
                         <p className="text-slate-600 text-sm mb-4">Grade: Distinction</p>
                         <p className="text-slate-600 text-sm leading-relaxed">
-                            Thesis on Hessian approximation for influence functions. Coursework in Deep Learning, Geometric Deep Learning, Efficient Transformers, and Generative Modeling.
+                            Thesis on Hessian approximation for influence functions. Coursework in Efficient Transformers, Diffusion and Flow-based models, GPU Parallelism, Kernel Methods, and Geometric Deep Learning.
                         </p>
                         </div>
 
