--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         Steve Hong
                     </h1>
                     <p className="text-xl md:text-2xl text-slate-600 leading-relaxed max-w-2xl mb-10">
-                        I have been working on AI research, and currently work as a Quantitative Trader/Researcher at <span className="font-medium text-slate-900">DV Trading LLC</span>.
+                        My personal research focuses on efficient inference and alignment techniques for LLMs. Currently building trading strategies at <span className="font-medium text-slate-900">DV Trading LLC</span>.
                     </p>
                     
                     <div className="flex flex-wrap gap-4">
@@ -186,9 +186,11 @@
                                 <span className="px-2 py-1 rounded text-xs font-bold bg-indigo-100 text-indigo-700">NeurIPS MechInterp (Spotlight)</span>
                                 <span className="text-slate-400 text-sm">2025</span>
                             </div>
-                            <h3 className="text-xl font-bold text-slate-900 mb-3 group-hover:text-indigo-600 transition-colors">
-                                Studying the Impact of Curvature Approximations in Influence Functions
-                            </h3>
+                            <a href="https://arxiv.org/pdf/2509.23437" target="_blank" rel="noopener noreferrer">
+                                <h3 className="text-xl font-bold text-slate-900 mb-3 group-hover:text-indigo-600 transition-colors">
+                                    Studying the Impact of Curvature Approximations in Influence Functions
+                                </h3>
+                            </a>
                             <p className="text-slate-600 mb-4 leading-relaxed">
                                 Investigated the K-FAC approximation by decomposing it into GGN, block-diagonal, and Kronecker factorization layers. Experiments revealed Kronecker factorization as the dominant factor, leading to formalized criteria for damping choices and stress-testing via activation scaling.
                             </p>
@@ -214,9 +216,11 @@
                                 <span className="px-2 py-1 rounded text-xs font-bold bg-indigo-100 text-indigo-700">NeurIPS SPIGM</span>
                                 <span className="text-slate-400 text-sm">2025</span>
                             </div>
-                            <h3 className="text-xl font-bold text-slate-900 mb-3 group-hover:text-indigo-600 transition-colors">
-                                Multi-scale AR Models are Laplacian, Discrete, and Latent Diffusion Models in Disguise
-                            </h3>
+                            <a href="https://arxiv.org/pdf/2510.02826" target="_blank" rel="noopener noreferrer">
+                                <h3 className="text-xl font-bold text-slate-900 mb-3 group-hover:text-indigo-600 transition-colors">
+                                    Multi-scale AR Models are Laplacian, Discrete, and Latent Diffusion Models in Disguise
+                                </h3>
+                            </a>
                             <p className="text-slate-600 mb-4 leading-relaxed">
                                 Proposed an iterative refinement view linking VAR models formally to diffusion processes. Developed an end-to-end pipeline with tokenization and latent pyramids, establishing practical speed-quality guidelines through targeted ablations on refinement bands and target types.
                             </p>
@@ -242,9 +246,11 @@
                                 <span className="px-2 py-1 rounded text-xs font-bold bg-emerald-100 text-emerald-700">ICML GenBio</span>
                                 <span className="text-slate-400 text-sm">2025</span>
                             </div>
-                            <h3 className="text-xl font-bold text-slate-900 mb-3 group-hover:text-indigo-600 transition-colors">
-                                Diffusion-Free Graph Generation with Next-Scale Prediction
-                            </h3>
+                            <a href="https://arxiv.org/pdf/2503.23612" target="_blank" rel="noopener noreferrer">
+                                <h3 className="text-xl font-bold text-slate-900 mb-3 group-hover:text-indigo-600 transition-colors">
+                                    Diffusion-Free Graph Generation with Next-Scale Prediction
+                                </h3>
+                            </a>
                             <p className="text-slate-600 mb-4 leading-relaxed">
                                 Developed an efficient, interpretable framework for graph generation using multi-scale models, advised by Petar Veličković and Pietro Liò. The approach achieved a 12x boost in inference speed with minimal performance cost by utilizing VQ-VAE and Transformer architectures.
                             </p>
@@ -270,9 +276,11 @@
                                 <span className="px-2 py-1 rounded text-xs font-bold bg-amber-100 text-amber-700">Energy Reports Journal</span>
                                 <span className="text-slate-400 text-sm">2024</span>
                             </div>
-                            <h3 className="text-xl font-bold text-slate-900 mb-3 group-hover:text-indigo-600 transition-colors">
-                                Wind Power Modelling via Heteroscedastic Non-Stationary Gaussian Processes
-                            </h3>
+                            <a href="https://arxiv.org/pdf/2505.09026" target="_blank" rel="noopener noreferrer">
+                                <h3 className="text-xl font-bold text-slate-900 mb-3 group-hover:text-indigo-600 transition-colors">
+                                    Wind Power Modelling via Heteroscedastic Non-Stationary Gaussian Processes
+                                </h3>
+                            </a>
                             <p className="text-slate-600 mb-4 leading-relaxed">
                                 Created three novel non-stationary multi-task Gaussian Process kernels to better capture wind dynamics. The resulting method reduced out-of-sample RMSE by approximately 20% compared to standard baselines, contributing a new package for the Non-Stationary Spectral kernel.
                             </p>
