--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                             </div>
                             <div>
                             <div className="flex items-center gap-2 mb-2">
-                                <span className="px-2 py-1 rounded text-xs font-bold bg-indigo-100 text-indigo-700">NeurIPS MechInterp (Spotlight)</span>
+                                <span className="px-2 py-1 rounded text-xs bg-indigo-100 text-indigo-700"><span className="font-bold text-sm">NeurIPS</span> <span className="font-light">MechInterp (Spotlight)</span></span>
                                 <span className="text-slate-400 text-sm">2025</span>
                             </div>
                             <a href="https://arxiv.org/pdf/2509.23437" target="_blank" rel="noopener noreferrer">
@@ -213,7 +213,7 @@
                             </div>
                             <div>
                             <div className="flex items-center gap-2 mb-2">
-                                <span className="px-2 py-1 rounded text-xs font-bold bg-indigo-100 text-indigo-700">NeurIPS SPIGM</span>
+                                <span className="px-2 py-1 rounded text-xs bg-indigo-100 text-indigo-700"><span className="font-bold text-sm">NeurIPS</span> <span className="font-light">SPIGM</span></span>
                                 <span className="text-slate-400 text-sm">2025</span>
                             </div>
                             <a href="https://arxiv.org/pdf/2510.02826" target="_blank" rel="noopener noreferrer">
@@ -243,7 +243,7 @@
                             </div>
                             <div>
                             <div className="flex items-center gap-2 mb-2">
-                                <span className="px-2 py-1 rounded text-xs font-bold bg-emerald-100 text-emerald-700">ICML GenBio</span>
+                                <span className="px-2 py-1 rounded text-xs bg-emerald-100 text-emerald-700"><span className="font-bold text-sm">ICML</span> <span className="font-light">GenBio</span></span>
                                 <span className="text-slate-400 text-sm">2025</span>
                             </div>
                             <a href="https://arxiv.org/pdf/2503.23612" target="_blank" rel="noopener noreferrer">
