Revert image structure

--- a/index.html
+++ b/index.html
@@ -133,37 +133,27 @@
 
                 {/* Hero Section */}
                 <header className="pt-32 pb-20 md:pt-48 md:pb-32 px-6 bg-white">
-                    <div className="max-w-5xl mx-auto flex flex-col md:flex-row items-center gap-12">
-                    <div className="flex-1">
-                        <h1 className="font-serif text-5xl md:text-7xl font-bold text-slate-900 mb-8 leading-tight">
-                            Steve Hong
-                        </h1>
-                        <p className="text-xl md:text-2xl text-slate-600 leading-relaxed max-w-2xl mb-10">
-                            My personal research focuses on efficient inference and alignment techniques for LLMs. Currently building trading strategies at <span className="font-medium text-slate-900">DV Trading LLC</span>.
-                        </p>
-                        
-                        <div className="flex flex-wrap gap-4">
-                            <a href="https://scholar.google.com/citations?user=5eHjRVUAAAAJ&hl=en" target="_blank" rel="noopener noreferrer" className="flex items-center gap-2 px-5 py-3 bg-slate-900 text-white rounded-lg hover:bg-slate-800 transition-all hover:-translate-y-1">
-                            <GraduationCap size={18} />
-                            <span>Google Scholar</span>
-                            </a>
-                            <a href="https://github.com/SteveHong1901" target="_blank" rel="noopener noreferrer" className="flex items-center gap-2 px-5 py-3 bg-white border border-slate-200 text-slate-700 rounded-lg hover:border-indigo-300 hover:text-indigo-600 transition-all hover:-translate-y-1">
-                            <Github size={18} />
-                            <span>GitHub</span>
-                            </a>
-                            <a href="https://linkedin.com/in/steve-hong-1901" target="_blank" rel="noopener noreferrer" className="flex items-center gap-2 px-5 py-3 bg-white border border-slate-200 text-slate-700 rounded-lg hover:border-indigo-300 hover:text-indigo-600 transition-all hover:-translate-y-1">
-                            <Linkedin size={18} />
-                            <span>LinkedIn</span>
-                            </a>
-                        </div>
-                    </div>
+                    <div className="max-w-4xl mx-auto">
+                    <h1 className="font-serif text-5xl md:text-7xl font-bold text-slate-900 mb-8 leading-tight">
+                        Steve Hong
+                    </h1>
+                    <p className="text-xl md:text-2xl text-slate-600 leading-relaxed max-w-2xl mb-10">
+                        My personal research focuses on efficient inference and alignment techniques for LLMs. Currently building trading strategies at <span className="font-medium text-slate-900">DV Trading LLC</span>.
+                    </p>
                     
-                    <div className="w-64 h-64 md:w-80 md:h-80 flex-shrink-0">
-                        <img 
-                            src="imgs/DSCF5164.JPG" 
-                            alt="Steve Hong" 
-                            className="w-full h-full object-cover rounded-2xl shadow-xl rotate-3 hover:rotate-0 transition-transform duration-300"
-                        />
+                    <div className="flex flex-wrap gap-4">
+                        <a href="https://scholar.google.com/citations?user=5eHjRVUAAAAJ&hl=en" target="_blank" rel="noopener noreferrer" className="flex items-center gap-2 px-5 py-3 bg-slate-900 text-white rounded-lg hover:bg-slate-800 transition-all hover:-translate-y-1">
+                        <GraduationCap size={18} />
+                        <span>Google Scholar</span>
+                        </a>
+                        <a href="https://github.com/SteveHong1901" target="_blank" rel="noopener noreferrer" className="flex items-center gap-2 px-5 py-3 bg-white border border-slate-200 text-slate-700 rounded-lg hover:border-indigo-300 hover:text-indigo-600 transition-all hover:-translate-y-1">
+                        <Github size={18} />
+                        <span>GitHub</span>
+                        </a>
+                        <a href="https://linkedin.com/in/steve-hong-1901" target="_blank" rel="noopener noreferrer" className="flex items-center gap-2 px-5 py-3 bg-white border border-slate-200 text-slate-700 rounded-lg hover:border-indigo-300 hover:text-indigo-600 transition-all hover:-translate-y-1">
+                        <Linkedin size={18} />
+                        <span>LinkedIn</span>
+                        </a>
                     </div>
                     </div>
                 </header>
