Change pic path

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     
                     <div className="w-64 h-64 md:w-80 md:h-80 flex-shrink-0">
                         <img 
-                            src="imgs/DSCF5164.JPG" 
+                            src="imgs/7BD5A4B3-FF48-4BE7-8097-AE6953C1ED6E.jpeg" 
                             alt="Steve Hong" 
                             className="w-full h-full object-cover rounded-2xl shadow-lg"
                         />
