--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script type="text/babel" data-type="module">
         import React, { useState, useEffect } from 'https://esm.sh/react@18.2.0';
         import { createRoot } from 'https://esm.sh/react-dom@18.2.0/client';
-        import { Mail, Github, Linkedin, FileText, Download, ExternalLink, ChevronRight, BookOpen, GraduationCap, Briefcase, Code, Terminal } from 'https://esm.sh/lucide-react@0.263.1';
+        import { Mail, Github, Linkedin, Twitter, FileText, Download, ExternalLink, ChevronRight, BookOpen, GraduationCap, Briefcase, Code, Terminal } from 'https://esm.sh/lucide-react@0.263.1';
 
         const Portfolio = () => {
             const [activeSection, setActiveSection] = useState('research');
@@ -154,6 +154,10 @@
                             <a href="https://linkedin.com/in/steve-hong-1901" target="_blank" rel="noopener noreferrer" className="flex items-center gap-2 px-5 py-3 bg-white border border-slate-200 text-slate-700 rounded-lg hover:border-indigo-300 hover:text-indigo-600 transition-all hover:-translate-y-1">
                             <Linkedin size={18} />
                             <span>LinkedIn</span>
+                            </a>
+                            <a href="https://x.com/quant_ghibli" target="_blank" rel="noopener noreferrer" className="flex items-center gap-2 px-5 py-3 bg-white border border-slate-200 text-slate-700 rounded-lg hover:border-indigo-300 hover:text-indigo-600 transition-all hover:-translate-y-1">
+                            <Twitter size={18} />
+                            <span>X</span>
                             </a>
                         </div>
                     </div>
@@ -481,6 +485,7 @@
                         <a href="mailto:stevehongforwork@gmail.com" className="hover:text-white transition-colors"><Mail size={20} /></a>
                         <a href="https://github.com/SteveHong1901" target="_blank" rel="noopener noreferrer" className="hover:text-white transition-colors"><Github size={20} /></a>
                         <a href="https://linkedin.com/in/steve-hong-1901" target="_blank" rel="noopener noreferrer" className="hover:text-white transition-colors"><Linkedin size={20} /></a>
+                        <a href="https://x.com/quant_ghibli" target="_blank" rel="noopener noreferrer" className="hover:text-white transition-colors"><Twitter size={20} /></a>
                     </div>
                     </div>
                 </footer>
